fix: fix group name too long and audio show

--- a/src/components/chat/index.less
+++ b/src/components/chat/index.less
@@ -48,7 +48,19 @@
 		font-size    : 12px;
 		overflow     : hidden;
 		text-overflow: ellipsis;
-
+		.chat_box {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
+		.chat_name {
+			display: inline-block;
+			max-width: 500px;
+			overflow: hidden;
+			height: 50px;
+			margin-right: 10px;
+			text-overflow: ellipsis;
+		}
 		.user-ellipsis {
 			float      : right;
 			display    : inline-block;
